@@ -35,15 +35,18 @@ BSON_BEGIN_DECLS
 #if defined(_WIN32)
 #define MONGOC_ERRNO_IS_AGAIN(errno) \
    ((errno == EAGAIN) || (errno == WSAEWOULDBLOCK) || (errno == WSAEINPROGRESS))
+#define MONGOC_ERRNO_IS_TIMEDOUT(errno) (errno == WSAETIMEDOUT)
 #elif defined(__sun)
 /* for some reason, accept() returns -1 and errno of 0 */
 #define MONGOC_ERRNO_IS_AGAIN(errno)                                   \
    ((errno == EINTR) || (errno == EAGAIN) || (errno == EWOULDBLOCK) || \
     (errno == EINPROGRESS) || (errno == 0))
+#define MONGOC_ERRNO_IS_TIMEDOUT(errno) (errno == ETIMEDOUT)
 #else
 #define MONGOC_ERRNO_IS_AGAIN(errno)                                   \
    ((errno == EINTR) || (errno == EAGAIN) || (errno == EWOULDBLOCK) || \
     (errno == EINPROGRESS))
+#define MONGOC_ERRNO_IS_TIMEDOUT(errno) (errno == ETIMEDOUT)
 #endif
 
 
