@@ -275,6 +275,15 @@ _mongoc_stream_buffered_check_closed (mongoc_stream_t *stream) /* IN */
 }
 
 
+static bool
+_mongoc_stream_buffered_timed_out (mongoc_stream_t *stream) /* IN */
+{
+   mongoc_stream_buffered_t *buffered = (mongoc_stream_buffered_t *) stream;
+   BSON_ASSERT (stream);
+   return mongoc_stream_timed_out (buffered->base_stream);
+}
+
+
 /*
  *--------------------------------------------------------------------------
  *
@@ -316,6 +325,7 @@ mongoc_stream_buffered_new (mongoc_stream_t *base_stream, /* IN */
    stream->stream.readv = mongoc_stream_buffered_readv;
    stream->stream.get_base_stream = _mongoc_stream_buffered_get_base_stream;
    stream->stream.check_closed = _mongoc_stream_buffered_check_closed;
+   stream->stream.timed_out = _mongoc_stream_buffered_timed_out;
 
    stream->base_stream = base_stream;
 
