@@ -439,6 +439,16 @@ mongoc_stream_tls_secure_transport_handshake (mongoc_stream_t *stream,
    RETURN (false);
 }
 
+static bool
+_mongoc_stream_tls_secure_channel_timed_out (mongoc_stream_t *stream)
+{
+   mongoc_stream_tls_t *tls = (mongoc_stream_tls_t *) stream;
+
+   ENTRY;
+
+   RETURN (mongoc_stream_timed_out (tls->base_stream));
+}
+
 mongoc_stream_t *
 mongoc_stream_tls_secure_transport_new (mongoc_stream_t *base_stream,
                                         const char *host,
@@ -480,6 +490,7 @@ mongoc_stream_tls_secure_transport_new (mongoc_stream_t *base_stream,
    tls->parent.get_base_stream =
       _mongoc_stream_tls_secure_transport_get_base_stream;
    tls->parent.check_closed = _mongoc_stream_tls_secure_transport_check_closed;
+   tls->parent.timed_out = _mongoc_stream_tls_secure_channel_timed_out;
    memcpy (&tls->ssl_opts, opt, sizeof tls->ssl_opts);
    tls->handshake = mongoc_stream_tls_secure_transport_handshake;
    tls->ctx = (void *) secure_transport;
