@@ -480,6 +480,17 @@ mongoc_stream_check_closed (mongoc_stream_t *stream)
 }
 
 bool
+mongoc_stream_timed_out (mongoc_stream_t *stream)
+{
+   ENTRY;
+
+   BSON_ASSERT (stream);
+
+   /* for e.g. a file stream there is no timed_out function */
+   RETURN (stream->timed_out && stream->timed_out (stream));
+}
+
+bool
 _mongoc_stream_writev_full (mongoc_stream_t *stream,
                             mongoc_iovec_t *iov,
                             size_t iovcnt,
