@@ -62,7 +62,8 @@ struct _mongoc_stream_t {
                     size_t nstreams,
                     int32_t timeout);
    void (*failed) (mongoc_stream_t *stream);
-   void *padding[5];
+   bool (*timed_out) (mongoc_stream_t *stream);
+   void *padding[4];
 };
 
 
@@ -108,6 +109,8 @@ mongoc_stream_setsockopt (mongoc_stream_t *stream,
                           mongoc_socklen_t optlen);
 MONGOC_EXPORT (bool)
 mongoc_stream_check_closed (mongoc_stream_t *stream);
+MONGOC_EXPORT (bool)
+mongoc_stream_timed_out (mongoc_stream_t *stream);
 MONGOC_EXPORT (ssize_t)
 mongoc_stream_poll (mongoc_stream_poll_t *streams,
                     size_t nstreams,
