@@ -119,6 +119,14 @@ _mongoc_stream_debug_check_closed (mongoc_stream_t *stream)
 }
 
 
+static bool
+_mongoc_stream_debug_timed_out (mongoc_stream_t *stream)
+{
+   return mongoc_stream_timed_out (
+      ((mongoc_stream_debug_t *) stream)->wrapped);
+}
+
+
 static mongoc_stream_t *
 _mongoc_stream_debug_get_base_stream (mongoc_stream_t *stream)
 {
@@ -154,6 +162,7 @@ debug_stream_new (mongoc_stream_t *stream, debug_stream_stats_t *stats)
    debug_stream->vtable.writev = _mongoc_stream_debug_writev;
    debug_stream->vtable.setsockopt = _mongoc_stream_debug_setsockopt;
    debug_stream->vtable.check_closed = _mongoc_stream_debug_check_closed;
+   debug_stream->vtable.timed_out = _mongoc_stream_debug_timed_out;
    debug_stream->vtable.get_base_stream = _mongoc_stream_debug_get_base_stream;
 
    debug_stream->wrapped = stream;
